Wed Feb 13 01:23:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (arg_add_gen): removed since identical to arg_append_gen.

Tue Feb 12 21:04:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (exc_list): should use mrhs if non array.

Tue Feb 12 20:32:50 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/rational.rb (floor, ceil, truncate, round): do not use
	  definitions of Numeric.

	* lib/rational.rb (to_i): should returns truncated self.

	* lib/complex.rb (numerator): requires
	  Integer#{numerator,denominator}.

	* lib/complex.rb (quo): do not use definition of Numeric.

	* lib/complex.rb (>, >=, <, <=, between?, div, divmod, modulo,
	  floor, ceil, truncate, round): undef'ed.

	* lib/mathn.rb (Rational#inspect): removed.

Tue Feb 12 16:48:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (args, mrhs): flattens literal array splats.

	* parse.y (exc_list): splat literal array.

Tue Feb 12 15:27:19 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* bootstraptest/runner.rb, bootstraptest/test_method.rb, enc/depend,
	  instruby.rb, lib/mkmf.rb, lib/test/unit/util/procwrapper.rb,
	  mkconfig.rb, sample/test.rb, template/vm.inc.tmpl,
	  test/ruby/test_stringchar.rb: fixes arround String#gsub.


Tue Feb 12 15:11:47 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/lib/json/pure/generator.rb,
	  ext/json/lib/json/pure/parser.rb, ext/openssl/lib/openssl/x509.rb,
	  ext/win32ole/sample/olegen.rb, lib/date/format.rb, lib/irb/context.rb,
	  lib/irb/workspace.rb, lib/net/http.rb, lib/net/imap.rb,
	  lib/rdoc/generator.rb, lib/rdoc/markup/to_html.rb,
	  lib/rdoc/markup/to_latex.rb, lib/rdoc/parsers/parse_c.rb,
	  lib/rdoc/ri/formatter.rb, lib/rexml/parsers/baseparser.rb,
	  lib/rexml/quickpath.rb, lib/rexml/text.rb, lib/rss/parser.rb,
	  lib/uri/common.rb, lib/uri/generic.rb, lib/webrick/httpresponse.rb,
	  lib/webrick/httpservlet/filehandler.rb, lib/yaml/baseemitter.rb,
	  lib/yaml/encoding.rb: performance tuning arround String#gsub.
