@@ -1,4 +1,6 @@
-Wed Feb 13 01:23:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Feb 13 01:26:45 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (arg_concat_gen, arg_append_gen): optimize for array concat.
 
 	* parse.y (arg_add_gen): removed since identical to arg_append_gen.
 
